0.6.0 - currently working on
- [#2766] Feature: Add country model and mapper
- [#2679] Feature: Track the dirty/clean state of models
- [#2755] Fix: BE user mapper needs to lowercase the CLI user before DB search
- [#2737] Fix: set on a ghost should load the object
- [#2460] Feature: Add a m:n table mapper
- [#2725] Feature: Add a BE user class
- [#2728] Feature: The testing framework should create BE users
- [#2730] Fix: Undefined variable in catch section of tx_oelib_templatehelper::setSubpart
- [#2458] Feature: Support relations by comma-separated lists
- [#2717] Change: Speed up the fake FE
- [#1456] Cleanup: Simplify and clean up our singletons
- [#2703] Feature: Add an optional parameter "cssFile" to Mail::setHTMLMessage
- [#2463] Feature: Add a TS setup configuration class
- [#2708] Feature: Add a FrontEndLoginManager
- [#2119] Feature: Add a class "configurationRegistry"
- [#2678] Feature: Enhance the exception that is thrown when accessing a dead model's data
- [#2594] Feature: Use HTML for the thank-you and unregistration e-mails to the attendees
- [#2643] Feature: Add a list class
- [#2710] Fix: Character set for the e-mail tests must not be constant
- [#2661] Change: The front-end user mapper should use the logged-in user's data whenever possible
- [#2676] Fix: Test errors for inexistent objects in the specialized contact form and thumbnails view
- [#2658] Change: Add more tests for the mappers and model
- [#2626] Feature: Add a pageFinder class
- [#2663] Feature: Create a model and mapper FrontEndUserGroup
- [#2659] Fix: Autoloader should not bail out on an empty class name
- [#2662] Fix: Include of the FE class fails if tslib is not defined
- [#2530] Feature: Enhance the mailer classes to also send HTML e-mails
- [#2664] Feature: Add dataMapper::getNewGhost
- [#2457] Feature: Add foreign key mapping
- [#2653] Change: Rename the "empty" state to "virgin"
- [#2657] Change: testingFramework::cleanUp should clean up the mapper registry and everything