@@ -1,4 +1,5 @@
 0.6.0 - currently working on
+- [#2771] Feature: Add function setToDeleted to the model
 - [#2766] Feature: Add country model and mapper
 - [#2679] Feature: Track the dirty/clean state of models
 - [#2755] Fix: BE user mapper needs to lowercase the CLI user before DB search
